cm4all-workshop (2.0.8) unstable; urgency=low

  * build with Meson and Ninja
  * check for early PostgreSQL errors (e.g. DNS lookup failures)
  * improved uid/gid verify error messages
  * doc: document the GRANT on table "cronresults"

 --   

cm4all-workshop (2.0.7) unstable; urgency=low

  * cron: support "special" schedule strings such as "@daily"
  * cron: add special schedule "@once"

 -- Max Kellermann <mk@cm4all.com>  Tue, 31 Jan 2017 10:09:51 -0000

cm4all-workshop (2.0.6) unstable; urgency=low

  * cron: fix HTTP crash bug
  * cron: implement command URNs
  * spawn: forbid ptrace() and other dangerous system calls

 -- Max Kellermann <mk@cm4all.com>  Wed, 25 Jan 2017 21:44:35 -0000

cm4all-workshop (2.0.5) unstable; urgency=low

  * cron: capture the process output and save to "cronresults" table
  * cron: capture the HTTP response and save to "cronresults" table
  * cron: improved logging of failed HTTP requests

 -- Max Kellermann <mk@cm4all.com>  Wed, 04 Jan 2017 17:50:17 -0000

cm4all-workshop (2.0.4) unstable; urgency=low

  * cron: store execution results in the new "cronresults" table
  * cron: implement timeout (5 minutes)
  * cron: command can be "http://" URL
  * cron: cancel all jobs on shutdown

 -- Max Kellermann <mk@cm4all.com>  Wed, 21 Dec 2016 11:33:05 -0000

cm4all-workshop (2.0.3) unstable; urgency=low

  * workshop: load configuration from /etc/cm4all/workshop/workshop.conf
  * workshop: support multiple databases ("partitions")
  * cron: fix job execution use-after-free bug
  * cron: support multiple databases ("partitions")
  * cron: merge with Workshop
  * support PostgreSQL schemas

 -- Max Kellermann <mk@cm4all.com>  Mon, 05 Dec 2016 10:12:31 -0000

cm4all-workshop (2.0.2) unstable; urgency=low

  * spawn: no signal interruption while waiting for client to become ready
  * cron: new sub-project which is instructed by a translation server

 -- Max Kellermann <mk@cm4all.com>  Wed, 23 Nov 2016 15:56:43 -0000
