@@ -222,6 +222,7 @@ executable('cm4all-workshop',
   'src/PipeCaptureBuffer.cxx',
   'src/Expand.cxx',
   'src/Instance.cxx',
+  'src/Hook.cxx',
   'src/cron/Config.cxx',
   'src/cron/Schedule.cxx',
   'src/cron/Queue.cxx',
